--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jeff's Website</title>
+    <title>Chris Website</title>
   </head>
   <body>
 
@@ -13,92 +13,83 @@
     <main>
 
       <header>
-        <h1>Jeff Delaney</h1>
+        <h1>Chris Amaral</h1>
         <p>🚀 Welcome to my website!</p>
       </header>
 
 
       <blockquote>
-        <p>I like making stuff and putting it on the internet</p>
+        <p>I love everything in role I.T</p>
       </blockquote>
 
       <section>
         <h2>📜 Manifesto</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Hello! My name is Christopher, My skills are concentrated in Back-End, with experiences in AWS and with problem solving in Front-End.
         </p>
-
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
+          I currently work in the PSE (Platform Support Engineering) sector.
+                </p>
       </section>
 
       <section class="light">
         <h2>👩🏽‍🚀 Projects</h2>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <h3>Docker and Kubernetes  <a href="https://github.com/amaralchr250/Devops"> GitHub</a></h3>
 
-        <h2>🏆 Accomplishments</h2>
+        <h3>API Swagger<p> <a href="https://github.com/amaralchr250/python"> GitHub</a></p></h3>
+        
+        <h3>Backup MYSQL <p> <a href="https://github.com/amaralchr250/MysqlBackup"> GitHub</a> </p></h3>
 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="40" height="40"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" width="40" height="40"/>  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg" width="40" height="40"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" width="40" height="40" /> 
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" width="40" height="40" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" width="40" height="40" />         
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original-wordmark.svg" width="40" height="40"/>
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kubernetes/kubernetes-plain-wordmark.svg" width="40" height="40" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg" width="40" height="40" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-plain.svg" width="40" height="40" />
         </p>
 
       </section>
 
       <blockquote>
-        <p>The best way out is always through <br>-Robert Frost</p>
+        <p>Stay hungry. Stay foolish. <br>-Steve Jobs</p>
       </blockquote>
 
       <section class="left">
         <h2>🌮 Work History</h2>
 
-        <h3>McDonalds</h3>
+        <h3>EDCS - Analista de Infraestrutura</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Performance of Systems Support Teams, Answering Software Calls; Carrying out analyzes on the system, identifying the root cause of the problems and pointing out to the development teams the corrections for the identified problems, guaranteeing the quality and operation of the system. Assist in documenting the problems mapped by the team and identifying support development needs as well as suppliers for product deployment.        
         </p>
-        <h3>Burger King</h3>
+          <h3>SKY and DGO - Analista de Sustentação L2 (Digital) </h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Taco Bell</h3>
+          PERFORMANCE OF SYSTEM SUPPORT TEAMS, RESPONDING TO SOFTWARE CALLS;
+          PERFORMING ANALYSIS ON THE SYSTEM, IDENTIFYING THE ROOT CAUSE OF THE PROBLEMS AND POINTING TO THE
+          DEVELOPMENT TEAMS CORRECTIONS FOR IDENTIFIED PROBLEMS, ENSURING THE
+          SYSTEM QUALITY AND OPERATION. ASSIST IN THE DOCUMENTATION OF THE PROBLEMS MAPPED BY THE TEAM AND
+          IN IDENTIFYING SUSTAINABLE DEVELOPMENT NEEDS AS WELL AS SUPPLIERS
+          FOR DEPLOYMENT OF THE PRODUCT. (ORACLE OCI/L2 - IT SOLUTIONS)
+                </p>
+        <h3>Zoop - PSE</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          HANDLE SERVICE REQUESTS, INCIDENTS, CHANGES AND PROBLEMS, THROUGH ANALYSIS AND
+          TROUBLESHOOTING, EXECUTION OF PROCEDURES AND TRIGGING A EXPERT, MONITORING
+          PROACTIVE OF THE ENVIRONMENT WITH THE USE OF TOOLS FOR MANAGEMENT OF LOGS, DASHBOARDS AND MANAGEMENT OF
+          ALERTS. (L2/AWS ANDA SUPPORT PLATAFORM KUBERNETES/DOCKER)
+                  </p>
 
       </section>
 
       <blockquote>
-        <p>Thanks for watching!</p>
+        <p>Thanks for your visit!!</p>
       </blockquote>
-
 
     </main>
     
     <script type="module" src="/main.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   </body>
 </html>
