--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <section class="light">
         <h2>👩🏽‍🚀 Projects</h2>
 
-        <h3>Docker and Kubernetes  <a href="https://github.com/amaralchr250/Devops"> GitHub</a></h3>
+        <h3>Docker and Kubernetes - <a href="https://github.com/amaralchr250/Devops"> GitHub</a></h3>
 
-        <h3>API Swagger<p> <a href="https://github.com/amaralchr250/python"> GitHub</a></p></h3>
-        
-        <h3>Backup MYSQL <p> <a href="https://github.com/amaralchr250/MysqlBackup"> GitHub</a> </p></h3>
+        <h3>API Swagger - <a href="https://github.com/amaralchr250/python"> GitHub</a></h3>
+
+        <h3>Backup MYSQL - <a href="https://github.com/amaralchr250/MysqlBackup"> GitHub</a></h3>
 
         <p>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="40" height="40"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" width="40" height="40"/>  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg" width="40" height="40"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" width="40" height="40" /> 
@@ -54,7 +54,9 @@
       </section>
 
       <blockquote>
-        <p>Stay hungry. Stay foolish. <br>-Steve Jobs</p>
+        <p>Stay hungry. Stay foolish. <br>
+          
+          <br>-Steve Jobs</p>
       </blockquote>
 
       <section class="left">
